--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <title>Assignment Front End Basics</title>
 <script  src="app.js"></script>
 <script type="text/javascript"> 
-	console.log("The name: "+name+"\nAge: "+age+" \nDate of Birth:"+dob);
+	console.log("The name: "+name+"\nAge: "+age+" \nDate of Birth:"+dob+"\nPlace of Birth:"+pob);
 </script>
 </head>
 <body>	
